Adicionei um parágrafo.

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,6 +10,6 @@
  <h1>Olá, Mundo</h1>
  <hr>
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad repellendus quia omnis! Nemo omnis alias distinctio, perferendis ducimus, commodi ullam nostrum facere magni, architecto voluptas iusto! Ex iusto error iure?</p>
-
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus iure non sunt dolorem blanditiis quae, perspiciatis cupiditate aliquam, nostrum, illo eius. Porro totam provident cum facilis hic voluptate inventore a.</p>
 </body>
 </html>
